* What's new in version 2.1

- Some error messages now refer to additional information that is found
  in man pages.  These are generally named error::FOO(7stap) and may be
  read via
     % man 7stap error::FOO

- The dyninst backend's runtime has been improved to allow much more
  concurrency when probing multithreaded processes.

- The foreach looping constuct can now sort aggregate arrays by the user's      
  choice of aggregating function.  Previously, @count was implied.  e.g.:
     foreach ([x,y] in array @sum +) { println(@sum(array[x,y] } 

* What's new in version 2.0, 2012-10-09

- Systemtap includes a new prototype backend, which uses Dyninst to instrument
  a user's own processes at runtime. This backend does not use kernel modules,
  and does not require root privileges, but is restricted with respect to the
  kinds of probes and other constructs that a script may use.

  Users from source should configure --with-dyninst and install a
  fresh dyninst snapshot such as that in Fedora rawhide.  It may be
  necessary to disable conflicting selinux checks; systemtap will advise.

  Select this new backend with the new stap option --runtime=dyninst
  and a -c target process, along with normal options. (-x target
  processes are not supported in this prototype version.) For example:

    stap --runtime=dyninst -c 'stap -l begin' \
      -e 'probe process.function("main") { println("hi from dyninst!") }'

- To aid diagnosis, when a kernel panic occurs systemtap now uses
  the panic_notifier_list facility to dump a summary of its trace
  buffers to the serial console.

- The systemtap preprocessor now has a simple macro facility as follows:

    @define add(a,b) %( ((@a)+(@b)) %)
    @define probegin(x) %(
       probe begin {
         @x
       }
    %)

    @probegin( foo = @add(40, 2); print(foo) ) 

  Macros defined in the user script and regular tapset .stp files are
  local to the file. To get around this, the tapset library can define