@@ -1133,6 +1133,7 @@ the following syntax:
 .SAMPLE
 probe perf.type(NN).config(MM).sample(XX)
 probe perf.type(NN).config(MM)
+probe perf.type(NN).config(MM).process("NAME")
 .ESAMPLE
 The systemtap probe handler is called once per XX increments
 of the underlying performance counter.  The default sampling
@@ -1144,7 +1145,10 @@ system call, and/or the
 file.  Invalid combinations or exhausted hardware counter resources
 result in errors during systemtap script startup.  Systemtap does
 not sanity-check the values: it merely passes them through to
-the kernel for error- and safety-checking.
+the kernel for error- and safety-checking.  By default the perf event
+probe is systemwide unless .process is specified, which will bind the
+probe to a specific process.  If the process name is omitted then it
+is inferred from the stap -c argument.
 
 .SH EXAMPLES
 .PP
