@@ -1,7 +1,6 @@
 /* -*- linux-c -*- 
  * Perf Functions
- * Copyright (C) 2006 Red Hat Inc.
- * Copyright (C) 2010 Red Hat Inc.
+ * Copyright (C) 2006-2012 Red Hat Inc.
  *
  * This file is part of systemtap, and is free software.  You can
  * redistribute it and/or modify it under the terms of the GNU General
@@ -26,43 +25,60 @@
  *
  * @param stp Handle for the event to be registered.
  */
-static long _stp_perf_init (struct stap_perf_probe *stp)
+static long _stp_perf_init (struct stap_perf_probe *stp, struct task_struct* task)
 {
 	int cpu;
 
-	/* allocate space for the event descriptor for each cpu */
-	stp->events = _stp_alloc_percpu (sizeof(struct perf_event*));
-	if (stp->events == NULL) {
-		return -ENOMEM;
-	}
-
-	/* initialize event on each processor */
-	for_each_possible_cpu(cpu) {
-		struct perf_event **event = per_cpu_ptr (stp->events, cpu);
-		if (cpu_is_offline(cpu)) {
-			*event = NULL;
-			continue;
-		}
-		*event = perf_event_create_kernel_counter(&stp->attr,
-							  cpu,
-#if defined(STAPCONF_PERF_STRUCTPID) || defined (STAPCONF_PERF_COUNTER_CONTEXT)
-                                                          NULL,
-#else
-                                                          -1,
-#endif
-							  stp->callback
+	if (stp->per_thread) {
+	  if (task == 0) /* need to setup later when we know the task */
+	    return 0;
+	  else  {
+	    if (stp->per_thread_event != 0) /* already setup */
+	      return 0;
+	    stp->per_thread_event = perf_event_create_kernel_counter(&stp->attr,
+								     -1, task,
+								     stp->callback
 #ifdef STAPCONF_PERF_COUNTER_CONTEXT
-							  , NULL
+								     , NULL
 #endif
-							  );
-
-		if (IS_ERR(*event)) {
-			long rc = PTR_ERR(*event);
-			*event = NULL;
-			_stp_perf_del(stp);
-			return rc;
-		}
+								     );
+	  }
 	}
+	else {
+	  /* allocate space for the event descriptor for each cpu */
+	  stp->events = _stp_alloc_percpu (sizeof(struct perf_event*));
+	  if (stp->events == NULL) {
+	    return -ENOMEM;
+	  }
+
+	  /* initialize event on each processor */
+	  for_each_possible_cpu(cpu) {
+	    struct perf_event **event = per_cpu_ptr (stp->events, cpu);
+	    if (cpu_is_offline(cpu)) {
+	      *event = NULL;
+	      continue;
+	    }
+	    *event = perf_event_create_kernel_counter(&stp->attr,
+						      cpu,
+#if defined(STAPCONF_PERF_STRUCTPID) || defined (STAPCONF_PERF_COUNTER_CONTEXT)
+						      NULL,
+#else
+						      -1,
+#endif
+						      stp->callback
+#ifdef STAPCONF_PERF_COUNTER_CONTEXT
+						      , NULL
+#endif
+						      );
+
+	    if (IS_ERR(*event)) {
+	      long rc = PTR_ERR(*event);
+	      *event = NULL;
+	      _stp_perf_del(stp);
+	      return rc;
+	    }
+	  }
+	} /* (stp->per_thread) */
 	return 0;
 }
 
@@ -73,18 +89,28 @@ static long _stp_perf_init (struct stap_perf_probe *stp)
  */
 static void _stp_perf_del (struct stap_perf_probe *stp)
 {
-	if (stp && stp->events) {
-		int cpu;
-		/* shut down performance event sampling */
-		for_each_possible_cpu(cpu) {
-			struct perf_event **event = per_cpu_ptr (stp->events, cpu);
-			if (*event) {
-				perf_event_release_kernel(*event);
-			}
-		}
-		_stp_free_percpu (stp->events);
-		stp->events = NULL;
-	}
+  int cpu;
+  if (! stp || !stp->events)
+    return;
+
+  /* shut down performance event sampling */
+  if (stp->per_thread) {
+    if (stp->per_thread_event) {
+      perf_event_release_kernel(stp->per_thread_event);
+    }
+    stp->per_thread_event = NULL;
+  }
+  else {
+    for_each_possible_cpu(cpu) {
+      struct perf_event **event = per_cpu_ptr (stp->events, cpu);
+      if (*event) {
+	perf_event_release_kernel(*event);
+      }
+    }
+    _stp_free_percpu (stp->events);
+    stp->events = NULL;
+  }
 }
+
 
 #endif /* _PERF_C_ */
