@@ -1,7 +1,6 @@
 /* -*- linux-c -*- 
  * Perf Header File
- * Copyright (C) 2006 Red Hat Inc.
- * Copyright (C) 2010 Red Hat Inc.
+ * Copyright (C) 2006-2012 Red Hat Inc.
  *
  * This file is part of systemtap, and is free software.  You can
  * redistribute it and/or modify it under the terms of the GNU General
@@ -17,15 +16,24 @@
  */
 
 struct stap_perf_probe {
-	struct perf_event_attr attr;
+        struct perf_event_attr attr;
 	perf_overflow_handler_t callback;
 	const struct stap_probe * const probe;
-
-	/* per-cpu data. allocated with _stp_alloc_percpu() */
-	struct perf_event **events;
+        int per_thread;
+        union
+	{
+	  /* per-cpu data. allocated with _stp_alloc_percpu() */
+	  struct perf_event **events;
+	  struct 
+	  {
+	    /* per-task data. allocated by perf_event_create_kernel_counter */
+	    struct perf_event *per_thread_event;
+	    struct stap_task_finder_target tgt;
+	  };
+	};
 };
 
-static long _stp_perf_init (struct stap_perf_probe *stp);
+static long _stp_perf_init (struct stap_perf_probe *stp, struct task_struct* task);
 
 static void _stp_perf_del (struct stap_perf_probe *stp);
 
