@@ -183,6 +183,8 @@ set restricted_probe_types [list \
   "module(string).statement(string)" \
   "perf.type(number).config(number)" \
   "perf.type(number).config(number).sample(number)" \
+  "perf.type(number).config(number).process" \
+  "perf.type(number).config(number).process(string)" \
   "process(number).insn" \
   "process(number).insn.block" \
   "process(string).insn.block" \
